--- a/index.html
+++ b/index.html
@@ -11,10 +11,53 @@
       href="https://fonts.googleapis.com/css2?family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Viga&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <img src="./img/header.png" alt="" />
-    <h1>Hallo Welt</h1>
+    <div class="aot">
+      <header>
+        <img src="./img/logo.png" alt="" />
+        <nav>
+          <a class="navLink" href="#">HOME</a>
+          <a class="navLink" href="#">LOCATIONS</a>
+          <a class="navLink" href="#">ABOUT</a>
+          <a class="navLink" href="#">CONTACT</a>
+          <img src="./img/facebook_white.png" alt="" class="navImage" />
+          <img src="./img/instagram_white.png" alt="" class="navImage" />
+          <img src="./img/twitter_white.png" alt="" class="navImage" />
+        </nav>
+      </header>
+
+      <h1>ROCK MOUNTAIN</h1>
+      <div>Discover the best Music live</div>
+      <a href="#" class="button">UPCOMING SHOW</a>
+    </div>
+
+    <div class="section-quicklinks">
+        <a href="#" class="quicklink">
+            NEWS
+                <img src="./img/category1.png" alt="">
+
+
+        </a>
+        <a href="#" class="quicklink">
+            ALBUM
+                <img src="./img/category2.png" alt="">
+
+
+        </a>
+        <a href="#" class="quicklink">
+            STORE
+                <img src="./img/category3.png" alt="">
+
+
+        </a>
+
+
+    </div>
+
   </body>
 </html>
