Code bis Sect 09

--- a/index.html
+++ b/index.html
@@ -33,31 +33,40 @@
 
       <h1>ROCK MOUNTAIN</h1>
       <div>Discover the best Music live</div>
-      <a href="#" class="button">UPCOMING SHOW</a>
+      <a href="#" class="button mt-16">UPCOMING SHOW</a>
     </div>
 
     <div class="section-quicklinks">
-        <a href="#" class="quicklink">
-            NEWS
-                <img src="./img/category1.png" alt="">
-
-
-        </a>
-        <a href="#" class="quicklink">
-            ALBUM
-                <img src="./img/category2.png" alt="">
-
-
-        </a>
-        <a href="#" class="quicklink">
-            STORE
-                <img src="./img/category3.png" alt="">
-
-
-        </a>
-
-
+      <a href="#" class="quicklink">
+        NEWS
+        <img src="./img/category1.png" alt="" />
+      </a>
+      <a href="#" class="quicklink">
+        ALBUM
+        <img src="./img/category2.png" alt="" />
+      </a>
+      <a href="#" class="quicklink">
+        STORE
+        <img src="./img/category3.png" alt="" />
+      </a>
     </div>
 
+    <div class="buy-ticket-section">
+      <img class="buy-ticket-img-left" src="./img/p5.png" alt="Live concert" />
+      <div class="festival-info">
+        <span>27 Sep 25</span>
+        <h2>31 State Festival</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores
+          numquam veniam eum modi veritatis accusamus voluptatem dolorem
+          necessitatibus labore consequuntur dolores reprehenderit tenetur
+          corrupti, cumque quia neque sunt voluptatibus quibusdam.
+        </p>
+      </div>
+      <div class="separator"></div>
+      <div class="buy-ticket-container">
+        <a href="#" class="button">BUY TICKET</a>
+      </div>
+    </div>
   </body>
 </html>
