--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <div class="aot">
+    <section class="aot">
       <header>
         <img src="./img/logo.png" alt="" />
         <nav>
@@ -34,9 +34,9 @@
       <h1>ROCK MOUNTAIN</h1>
       <div>Discover the best Music live</div>
       <a href="#" class="button mt-16">UPCOMING SHOW</a>
-    </div>
+    </section>
 
-    <div class="section-quicklinks">
+    <section class="section-quicklinks">
       <a href="#" class="quicklink">
         NEWS
         <img src="./img/category1.png" alt="" />
@@ -49,9 +49,9 @@
         STORE
         <img src="./img/category3.png" alt="" />
       </a>
-    </div>
+    </section>
 
-    <div class="buy-ticket-section">
+    <section class="buy-ticket-section">
       <img class="buy-ticket-img-left" src="./img/p5.png" alt="Live concert" />
       <div class="festival-info">
         <span>27 Sep 25</span>
@@ -67,6 +67,37 @@
       <div class="buy-ticket-container">
         <a href="#" class="button">BUY TICKET</a>
       </div>
-    </div>
+    </section>
+
+    <section class="slogan-section">
+      FOLLOW AND LISTEN TO THIS PLAYLIST TO GET PREPARED FOR THE SHOW!
+    </section>
+
+    <section class="video-section"></section>
+
+    <footer>
+      <div class="half-width footer-left">
+        SUBSCRIBE & FOLLOW TO GET UPDATED FROM ROCK MOUNTAIN
+      </div>
+      <div class="half-width">
+        <div class="footer-center">
+          <img
+            class="social-media-icon"
+            src="./img/Facebook.png"
+            alt="Facebook"
+          />
+          <img class="social-media-icon" src="./img/ins.png" alt="Instagram" />
+          <img
+            class="social-media-icon"
+            src="./img/twitter.png"
+            alt="Twitter"
+          />
+        </div>
+        <form class="footer-form">
+          <input required type="text" placeholder="Email address" />
+          <button class="button button-footer">SUBMIT</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
