Bis Modul 5 - Vid 3

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <header>
         <img src="./img/logo.png" alt="" />
         <nav>
-          <a class="navLink" href="#">HOME</a>
-          <a class="navLink" href="#">LOCATIONS</a>
-          <a class="navLink" href="#">ABOUT</a>
-          <a class="navLink" href="#">CONTACT</a>
+          <a class="navLink display-mobile" href="#">HOME</a>
+          <a class="navLink display-mobile" href="#">LOCATIONS</a>
+          <a class="navLink display-mobile" href="#">ABOUT</a>
+          <a class="navLink display-mobile" href="#">CONTACT</a>
           <img src="./img/facebook_white.png" alt="" class="navImage" />
           <img src="./img/instagram_white.png" alt="" class="navImage" />
           <img src="./img/twitter_white.png" alt="" class="navImage" />
