--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <section class="video-section"></section>
 
     <footer>
-      <div class="half-width footer-left">
+      <div class="half-width full-with-mobile footer-left">
         SUBSCRIBE & FOLLOW TO GET UPDATED FROM ROCK MOUNTAIN
       </div>
-      <div class="half-width">
+      <div class="half-width full-with-mobile">
         <div class="footer-center">
           <img
             class="social-media-icon"
